# pgmq

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  INSTALLATION.md  META.json  META.json.in  Makefile  README.md  Trunk.toml  Trunk.toml.in  UPDATING.md  docker-compose.devcontainer.yml  index.html  mkdocs.yml  pgmq.control  pyproject.toml
core/: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  sqlx-data.json
core/.sqlx/: query-0e13957cc5c1f96a07ec242ce393f0738d62d79d34182e3c9333e9f9712d4cbb.json  query-10ea79c92326fbee074db2d9629f60abb320be01d069b12b2360816267a64e3a.json  query-213c722c2cab09b2042dc989130c4131b322b5d0b616dbb91f8e8e8f411406f9.json  query-3a3440841fba7d0f8744f5873cdb93a64b6e2f6481c3b14af701c5189f5e73f0.json  query-595dd830c53f4560378cfadcf8a1cc6f566307e3d76fea4c84e35e70649a7f17.json  query-9919286cee87946b387f69e67df94f94eb0acdd3b5f4848faf092c55d484b61a.json  query-b42aa546a8e1f83b4da63a6a20aaa51778e01d8525b4b9b307576b2921eec305.json  query-c38b0cc48a6744bdb28ad1fa637223b6427eda19c0a52dc8881750d6a50ac0ef.json  query-c89ad5584222a1f9c0d505fe58bf035d68d033047176b106e289ad6842f49972.json  query-cd7b28f6bd348038e7c26d89292f2445841e7c13143b453277a010390699d1fc.json  query-ed8b7aacd0d94fe647899b6d2fe61a29372cd7d6dbc28bf59ac6bb3118e3fe6c.json
core/benches/: parsing.rs
core/migrations/: 20230601005200_dev.sql
core/src/: errors.rs  lib.rs  pg_ext.rs  query.rs  types.rs  util.rs
core/tests/: integration_test.rs  pg_ext_integration_test.rs
coredb-pgmq-python/: .gitignore  .tool-versions  Makefile  README.md  pyproject.toml
coredb-pgmq-python/benches/: bench.ipynb  bench.py
coredb-pgmq-python/coredb_pgmq_python/: queue.py
coredb-pgmq-python/tests/: test_integration.py
crates/pgmq/: Cargo.toml  Makefile  README.md
crates/pgmq/examples/: lifecycle.rs
crates/pgmq/src/: errors.rs  lib.rs  query.rs
crates/pgmq/tests/: integration_test.rs
extension/: Cargo.toml  README.md  pgmq.control
extension/examples/: python.py  ruby.rb
extension/integration_test/: Cargo.toml
extension/sql/: pgmq--0.11.1--0.11.2.sql  pgmq--0.14.3--0.15.0.sql  pgmq--1.2.0--1.2.1.sql  pgmq.sql
extension/src/: api.rs  lib.rs  metrics.rs  partition.rs
extension/tests/: integration_tests.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
integration_test/tests/: integration_tests.rs
pgmq-rs/: Cargo.toml  LICENSE  Makefile  README.md  sqlx-data.json
pgmq-rs/.sqlx/: query-001695518a3a4908b757c91599f168ead31456c9b327e0468ef42c170be3a087.json  query-003aeda06515f41f2a1e9237046ed4674508faca405cf8efe3f5f65f1a453f83.json  query-02debe6ad1b36abb3aef2a6736059fbb04fae4e3868afb84b175bcb73760ad0c.json  query-056c21572eb57d3fbc1bdbc94380e391b07bb7674b731305c7f197faedd3feb0.json  query-07917815df25f1ac06675a645a812d9791b3c1d32098248cf0f34aead4dcebc8.json  query-1e701ffaba99424780735b20d74a02fb756e2a2c6f6f4e9f6d762e6c1f39aa55.json  query-20f1319da349f2ade7036aa4ceb29784f0244bd2fc6b48f1ed1026130257da3e.json  query-21b0ca154a192498417a9f1683193f1103d1d6fa4d9dfdc195fb6b8c8092e602.json  query-23e056e8442ba9a1b2f4922d8b0f0b90a7b9d63a40be3345047450d0405b83b6.json  query-3ef45ff6a19824d8ee74cee7c59d61842adf0c5a619b1ac3acd47c448683e8e1.json  query-41fe5a602d2bf31f03b75fa79c0bb6c34da71e07bf1c865f5e0d623999d97dd7.json  query-43b84a99aea01a3bf6da3ce2489e49e50a2c762d860582c76970c5046d76dc39.json  query-4f4d42f44b0731d55ed5cbcd391fdda0f900b95c9ceacc2356d27e746ba7fb62.json  query-60f9928c156667a7d22f0d0d2a7ac2f5272c48228d8ebd03c40bc23162bf5d58.json  query-6dc9180d9d7b98ed42bafb9409995dfbe31ed602f0af924485b1c5ebdfb42864.json  query-7411f5320bc1833aa640b4ba892825a82b2381469aea7911397e14f4ed9346f2.json  query-775c8aa14d49076963fd996b465ff96213b44421787a615d5502e145b9a71005.json  query-7a169e392e36434f21764dc2f5367a54d34c6cf356681f898b2fc989858f502b.json  query-87079059aa0bfc8a7fd15f5095659241f69c196e7246bc44cfe509ad66d33669.json  query-879cb18f9c3fec28c6d88ced573bc5694e734159f818f5626b21ff64595039ef.json  query-8bf48b3cab42cc04047e8cc16cdd4064c3768328a673d8a278002afa85b2b1d4.json  query-8d7a14aae7e42d1c7832851006e2437bf0b1e9f275e62cceaa91e042ab265ac2.json  query-b4624572ccb21a9bf45340b3d438175cb333f8d251264dff74f8032ce15ac89f.json  query-b46b05578c075ecc8fb9c561a6d0be974810f4c2047b388832ef14f20a61996c.json  query-b60d35a08c8f6a1f449eb95d019b96aef002d56257427965b0205591cee50b9b.json  query-b6226444041b43eec27dbf3271075c0ac8530f43116ef02219c1d734904363cb.json  query-bcd20bd8b48f51b401b6bf908d47952ee410cf53fc85dba2192ae16f811de8a9.json  query-cb31699ff46d61c834893d93416c5321ea403e3001cdededf85b9fef2a5906b8.json  query-ce52b2704aba14225b28cb2c94ca669ba14dcb344ec27c4a025cc545d0ffd20f.json  query-de9ca57e75bfddcf8516ee5f7e65a0e5a1c90ccf1984d6f5d30cb27f9a282c45.json  query-e4ae7d7a07b82942bedfd633a555e7eeca38781a82d78096a9a388f74d42e96e.json  query-ecde748537ee27524a682a71ac5bfd9237c8b44300c6809cc5808cc1ba497d60.json  query-f3f011e1a531861630c09d79a2f8f1b11a9543e30bfcbb7654ce9e30f0cf51e3.json  query-f686f11720bb96004b7d51cf1989919f7fe714bfaa5a2c95d1b7f89cd01e29b7.json  query-f92137a89bb346186ce93fc9cb3fe1314ba1627985f7f9e274a412fddb43ecfd.json  query-f9b9885aac1d19e2a06b147d3a4f9a4f7a43c1d27be38adfb188aa4b7805b80d.json
pgmq-rs/examples/: basic.rs  transactions.rs
pgmq-rs/examples/basic/: Cargo.toml
pgmq-rs/migrations/: 20230809222001_dev.sql
pgmq-rs/src/: core_query.rs  core_types.rs  core_util.rs  lib.rs  pg_ext.rs  query.rs  util.rs
pgmq-rs/tests/: integration_test.rs  pg_ext_integration_test.rs
tembo-pgmq-python/: .gitignore  Makefile  README.md  pyproject.toml
tembo-pgmq-python/benches/: bench.py  locustfile.py  log.py  ops.py  runner.py  stats.py
tembo-pgmq-python/benches/payloads/: 10KB.json  1KB.json  22B.json
tembo-pgmq-python/example/: example_app_async.py  example_app_sync.py
tembo-pgmq-python/tembo_pgmq_python/: __init__.py  async_queue.py  decorators.py  messages.py  queue.py
tembo-pgmq-python/tests/: .env  test_async_integration.py  test_integration.py  test_queue.py
tembo-pgmq-python/tests/sqlalchemy/: _utils.py  (+5 more)
(+172 files in other folders)
