[package]
name = "pgmq"
version = "0.14.3"
edition = "2021"
authors = ["Tembo.io"]
description = "Postgres extension for PGMQ"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/pgmq/"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = "0.9.8"
serde = "1.0.152"
pgmq_crate = {package = "pgmq", path = "./core"}
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
pgrx-tests = "0.9.8"
chrono = { version = "0.4.23", features = [ "serde" ] }
rand = "0.8.5"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
tokio = { version = "1", features = ["macros"] }
whoami = "1.4.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
