[tool.poetry]
name = "pgmq"
version = "0.1.0"
description = "Dependencies for PGMQ MkDocs"
authors = ["Tembo <pgmq@tembo.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
markdown-include = "^0.8.1"
mkdocs = "^1.4.2"
mkdocs-material = "^7.3.6"
mdx-include = "^1.4.1"
mkdocs-markdownextradata-plugin = "^0.2.4"
mkdocstrings = "^0.16.2"
MarkupSafe = "2.0.1"
Jinja2 = "<3.0.0"
pymdown-extensions = "^9.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"