[package]
name = "pgmq-core"
version = "0.8.3"
edition = "2021"
authors = ["Tembo.io"]
description = "Core functionality shared between the PGMQ Rust SDK and Postgres Extension"
documentation = "https://docs.rs/pgmq"
homepage = "https://github.com/tembo-io/pgmq"
keywords = ["messaging", "queues", "postgres"]
license = "PostgreSQL"
readme = "README.md"
repository = "https://github.com/tembo-io/pgmq"
publish = true

[dependencies]
chrono = { version = "0.4.23", features = [ "serde" ] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = [ "raw_value" ] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "json" ] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["macros"] }
log = "0.4.17"
url = "2.3.1"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.10.0"
rand = "0.8.5"
regex = "1.5.4"
lazy_static = "1.4.0"

[[bench]]
name = "parsing"
harness = false
