[tool.poetry]
name = "coredb-pgmq-python"
version = "0.2.0"
description = "Python client for the PGMQ Postgres extension."
authors = ["Adam Hendel <adam@coredb.io>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "coredb_pgmq_python"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/CoreDB-io/coredb"
"Repository" = "https://github.com/CoreDB-io/coredb/tree/main/extensions/pgmq/coredb-pgmq-python"
"Documentation" = "https://github.com/CoreDB-io/coredb/tree/main/extensions/pgmq/coredb-pgmq-python"

[tool.poetry.dependencies]
python = "^3.9"
psycopg = {extras = ["binary", "pool"], version = "^3.1.8"}
pydantic = "^1.10.7"
orjson = "^3.8.10"

[tool.poetry.group.dev.dependencies]
mypy = "1.1.1"
pytest = "^7.3.0"
debugpy = "^1.6.7"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 120
target-version = ['py311', 'py310', 'py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = false
