[package]
name = "pgmq"
version = "0.5.0"
edition = "2021"
authors = ["CoreDB.io"]
description = "Postgres extension for PGMQ"
homepage = "https://www.coredb.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
pgx = "0.7.1"
serde = "1.0.152"
pgmq_crate = {package = "pgmq", version = "0.11.2"}
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
pgx-tests = "0.7.1"
chrono = { version = "0.4.23", features = [ "serde" ] }
rand = "0.8.5"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
tokio = { version = "1", features = ["macros"] }
whoami = "1.4.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
