[package]
name = "pgmq-integration-tests"
version = "0.1.0"
edition = "2021"
authors = ["Tembo.io"]
description = "Integration tests for PGMQ"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/pgmq/"
publish = false

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
url = "2.3.1"
pgmq = {path = "../pgmq-rs"}
log = "0.4.17"

[dev-dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["macros"] }
whoami = "1.4.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
