[tool.poetry]
name = "tembo-pgmq-python"
version = "0.6.0"
description = "Python client for the PGMQ Postgres extension."
authors = ["Adam Hendel <adam@tembo.io>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "tembo_pgmq_python"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/tembo-io/pgmq"
"Repository" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"
"Documentation" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"

[tool.poetry.dependencies]
python = ">=3.8"
psycopg = {extras = ["binary", "pool"], version = "^3"}
pydantic = ">=1,<3"
orjson = "^3"

[tool.poetry.group.dev.dependencies]
mypy = "1.1.1"
pandas = "^2.0.1"
pytest = "^7.3.0"
debugpy = "^1.6.7"
black = "^23.3.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
notebook = "^6.5.4"
pandas-stubs = "^2.0.1.230501"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
scipy = "^1"
typer = {extras = ["all"], version = "^0.9.0"}
types-psycopg2 = "^2.9.21.11"
locust = "^2.16.1"
ruff = "^0.3.1"
pyyaml = "^6.0.1"
seaborn = "^0.13.0"

[tool.black]
line-length = 120
target-version = ['py311', 'py310', 'py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = false
