[tool.poetry]
name = "tembo-pgmq-python"
version = "0.7.0"
description = "Python client for the PGMQ Postgres extension."
authors = ["Adam Hendel <adam@tembo.io>"]
license = "PostgreSQL"
readme = "README.md"
packages = [{include = "tembo_pgmq_python"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/tembo-io/pgmq"
"Repository" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"
"Documentation" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"

[tool.poetry.dependencies]
python = ">=3.9"
psycopg = {extras = ["binary", "pool"], version = "^3"}
orjson = "^3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.3.1"
psycopg = {version = "^3.1.14", extras = ["binary", "pool"]}


[tool.poetry.group.bench.dependencies]
pandas = "^2.2.2"
typer = "^0.12.3"
sqlalchemy = "^2.0.30"
locust = "^2.28.0"
pyyaml = "^6.0.1"
scipy = "^1.13.1"

[tool.black]
line-length = 120
target-version = ['py311', 'py310', 'py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = false
