[tool.poetry]
name = "tembo-pgmq-python"
version = "0.10.0"
description = "Python client for the PGMQ Postgres extension."
authors = ["Adam Hendel <adam@tembo.io>"]
license = "PostgreSQL"
readme = "README.md"
packages = [{include = "tembo_pgmq_python"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/tembo-io/pgmq"
"Repository" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"
"Documentation" = "https://github.com/tembo-io/pgmq/tree/main/tembo-pgmq-python"

[tool.poetry.dependencies]
python = ">=3.9"
psycopg = {extras = ["binary", "pool"], version = "^3"}
orjson = "^3"
asyncpg = { version = "^0.29.0", optional = true }
sqlalchemy = { version = "^2.0.35", optional = true }

[tool.poetry.extras]
async = ["asyncpg"]
sqlalchemy = ["sqlalchemy"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.3.1"
psycopg = {version = "^3.1.14", extras = ["binary", "pool"]}

[tool.poetry.group.dev-sqlalchemy.dependencies]
sqlalchemy = "2.0.35"
# postgresql drivers 
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
psycopg = "^3.2.1"
psycopg2-binary = "^2.9.9"
# testing
pytest = "7.4.4"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
filelock = "^3.15.4"


[tool.poetry.group.bench.dependencies]
pandas = "^2.2.2"
typer = "^0.12.3"
sqlalchemy = "^2.0.30"
locust = "^2.28.0"
pyyaml = "^6.0.1"
scipy = "^1.13.1"

[tool.black]
line-length = 120
target-version = ['py311', 'py310', 'py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = false
