[package]
name = "pgmq"
version = "0.0.3"
edition = "2021"

description = "A Rust client for Postgres Message Queues"
documentation = "https://github.com/CoreDB-io/coredb/crates/pgmq"
homepage = "https://www.coredb.io"
keywords = ["messaging", "queues", "postgres"]
license = "MIT"
readme = "README.md"
repo = "https://github.com/CoreDB-io/coredb/crates/pgmq"

[dependencies]
chrono = { version = "0.4.23", features = [ "serde" ] }
serde = "1.0.152"
serde_json = { version = "1.0.91", features = [ "raw_value" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
rand = "0.8.5"
