[package]
name = "pgmq"
version = "0.7.4-alpha.1"
edition = "2021"
authors = ["CoreDB.io"]
description = "A distributed message queue for Rust applications, on Postgres."
documentation = "https://docs.rs/pgmq"
homepage = "https://www.coredb.io"
keywords = ["messaging", "queues", "postgres"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb/tree/main/crates/pgmq"

[dependencies]
chrono = { version = "0.4.23", features = [ "serde" ] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = [ "raw_value" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["macros"] }
log = "0.4.17"
url = "2.3.1"

[dev-dependencies]
cargo-readme = "3.2.0"
rand = "0.8.5"
